objects/QaObj5__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LookupField1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QaObj5s</relationshipLabel>
        <relationshipName>QaObj5s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasterField1__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QaObj5s (Account)</relationshipLabel>
        <relationshipName>QaObj5s1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>QaObj5</label>
    <nameField>
        <label>QaObj5 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QaObj5s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>